#23 Code review changes