@@ -63,9 +63,7 @@ public class OtpApiClient {
             req.time().toLocalDate().toString(),
             req.time().toLocalTime().truncatedTo(ChronoUnit.SECONDS).toString(),
             req.searchDirection().isArriveBy(),
-            req.searchWindow().isPresent()
-                ? String.format("searchWindow : %d", req.searchWindow().get().toMinutes())
-                : "",
+            req.searchWindow().map(sw -> "searchWindow : %d".formatted(sw.toSeconds())).orElse(""),
             req.walkReluctance(),
             req.wheelchair());
 
